RESOLVED FIXED 234948
Values in WebAnimation::instances should not be null-checked
https://bugs.webkit.org/show_bug.cgi?id=234948
Summary Values in WebAnimation::instances should not be null-checked
Antoine Quint
Reported 2022-01-07 00:42:33 PST
Values in WebAnimation::instances should not be null-checked
Attachments
Patch (2.13 KB, patch)
2022-01-07 00:43 PST, Antoine Quint
darin: review+
Antoine Quint
Comment 1 2022-01-07 00:43:59 PST
Antoine Quint
Comment 2 2022-01-07 10:46:14 PST
Radar WebKit Bug Importer
Comment 3 2022-01-07 10:47:32 PST
Note You need to log in before you can comment on or make changes to this bug.