Values in WebAnimation::instances should not be null-checked https://bugs.webkit.org/show_bug.cgi?id=234948

Reviewed by Darin Adler.

The HashSet<WebAnimation*> returned by WebAnimation::instances() cannnot hold nullptr
values so we should not have any check for a null value when iterating over its values.

* dom/Document.cpp:
(WebCore::Document::matchingAnimations):
(WebCore::Document::keyframesRuleDidChange):


Canonical link: https://commits.webkit.org/245824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287761 268f45cc-cd09-0410-ab3c-d52691b4dbfc